--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,3 +32,21 @@ android {
         disable 'InvalidPackage'
     }
 }
+
+def localProperties = new Properties()
+def localPropertiesFile = rootProject.file('local.properties')
+if (localPropertiesFile.exists()) {
+    localPropertiesFile.withReader('UTF-8') { reader -> localProperties.load(reader) }
+}
+
+def flutterRoot = localProperties.getProperty('flutter.sdk')
+if (flutterRoot == null) {
+    throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+}
+
+//generate the flutter jar file with this command = flutter precache -v;
+dependencies {
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+//    implementation files("${flutterRoot}/bin/cache/artifacts/engine/android-arm/flutter.jar")
+}
